--- a/css/mobile.css
+++ b/css/mobile.css
@@ -35,19 +35,20 @@
     filter: unset;
 }
 
-.contact  {
+#contact  {
+    margin-top: 50px;
     width: 90vw;
-    height: 70vh;
+    height: 100vh;
     margin: 5%;
 }
-.contact form label {
+#contact form label {
     font-size: 1.5rem;
 }
-.contact form input {
+#contact form input {
     margin: 0.5rem;
 }
 
-.contact form {
+#contact form {
     margin: 5%;
 }
 
